@@ -1,6 +1,7 @@
 0.17.9
 	new feature: added per-user UI options (ticket:29)
 	bugfix: error message was lost on SNMP tab (reported by Tommi Hokkanen)
+	bugfix: expand/collapse links on IPv4 tree view (ticket:308)
 0.17.8 2009-12-25
 	bugfix: triggers disable tabs completely now (ticket:211)
 	bugfix: properly delete objects with linked ports (ticket:300)
